<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lin_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_item"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp">

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="130dp"
            android:layout_marginRight="130dp"
            android:ellipsize="end"
            android:lines="1"
            android:maxLines="1"
            android:text="@string/product_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true">

            <TextView
                android:id="@+id/quantity_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/show_x_quantity"
                android:textAppearance="?android:attr/textAppearanceLarge" />


            <TextView
                android:id="@+id/expiry_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/show_days_expiry"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#4CAF50" />
        </LinearLayout>

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:id="@+id/ic_time"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:src="@drawable/ic_input_black_48dp"
                android:tint="@android:color/darker_gray" />

            <TextView
                android:id="@+id/input_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/date_placeholder"
                android:textAppearance="?android:attr/textAppearanceListItem"
                android:textColor="@android:color/darker_gray" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/expiry_image"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:src="@drawable/ic_access_time_black_48dp"
                android:tint="@android:color/darker_gray" />

            <TextView
                android:id="@+id/expiry_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginStart="6dp"
                android:text="@string/autorenew_short"
                android:textAppearance="?android:attr/textAppearanceListItem"
                android:textColor="@android:color/darker_gray" />
        </LinearLayout>

    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/darker_gray" />

</LinearLayout>