<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_tool_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp"
            app:expandedTitleTextAppearance="@style/Widget.AppCompat.ActionBar.TabText"
            app:layout_scrollFlags="scroll|enterAlways"
            app:statusBarScrim="?attr/colorAccent">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.CollapsingToolbarLayout>

        <android.support.v7.widget.Toolbar
            android:id="@+id/extended_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:elevation="0dp"
            app:layout_collapseMode="none"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="40dp"
                android:paddingEnd="15dp"
                android:paddingLeft="46dp"
                android:paddingRight="15dp"
                android:paddingStart="46dp"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginStart="2dp"
                    android:text="@string/product_name"
                    android:textColor="@android:color/white" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textinput_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:descendantFocusability="beforeDescendants"
                    android:focusableInTouchMode="true">

                    <EditText
                        android:id="@+id/product_name_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/white"
                        android:ems="20"
                        android:imeOptions="actionGo"
                        android:inputType="textCapWords"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@android:color/white"
                        android:textCursorDrawable="@null" />

                </android.support.design.widget.TextInputLayout>


            </LinearLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <!-- quantity -->
            <RelativeLayout
                android:id="@+id/quantity_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="?android:selectableItemBackground"
                android:clickable="true"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingStart="15dp"
                android:paddingTop="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ic_qunatity"
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="20dp"
                        android:src="@drawable/ic_amount_black_24px"
                        android:tint="@android:color/darker_gray" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="6dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:text="@string/quantity"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@android:color/black" />

                        <TextView
                            android:id="@+id/quantity_field"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="1" />
                    </LinearLayout>

                </LinearLayout>
            </RelativeLayout>

            <!-- Expiry Date -->
            <RelativeLayout
                android:id="@+id/expiry_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:clickable="true"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingStart="15dp"
                android:paddingTop="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ic_expiry"
                        android:layout_width="25dp"
                        android:layout_height="35dp"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="20dp"
                        android:src="@drawable/ic_access_time_black_48dp"
                        android:tint="@android:color/darker_gray" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:text="@string/expiry_date"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@android:color/black" />

                        <TextView
                            android:id="@+id/expiry_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="01.01.1970" />
                    </LinearLayout>

                </LinearLayout>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="65dp"
                android:background="@android:color/darker_gray" />

            <!-- autorenew -->
            <RelativeLayout
                android:id="@+id/autorenew_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:clickable="true"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingStart="15dp"
                android:paddingTop="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/autorenew_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingEnd="15dp"
                        android:paddingLeft="20dp"
                        android:paddingRight="15dp"
                        android:paddingStart="20dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:text="@string/autorenew"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@android:color/black" />

                        <TextView
                            android:id="@+id/autorenew_desc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/autorenew_descr" />
                    </LinearLayout>

                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
